# NFT-Portfolio-App

./: README.md
backend/: pyproject.toml
backend/app/: api.py
