[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Sloop <66267333+spallis93@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "~3.10"
requests = "^2.28.1"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
